[package]
name = "al"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
path = "./src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
draw = "0.3.0"
wasm-bindgen = "0.2.87"
web-sys = { version = "0.3.64", features = ["Window", "HtmlDocument", "HtmlCanvasElement", "CanvasRenderingContext2d"] }
